Change stats backend API data structure